force-app/main/default/objects/Player__c/fields/Highest_Score__c.field-meta.xml
<CustomField>
    <fullName>Highest_Score__c</fullName>
    <label>Highest Score</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>