force-app/main/default/objects/Player__c/fields/Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>Matches_Played__c</fullName>
    <label>Matches Played</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>